--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = potd_solo_clears.settings
+default = ddlb.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = potd_solo_clears
+project = ddlb
